# multiagent-debate

./: .env.example  .gitignore  README.md  gradio_ui.py  pyproject.toml  requirements.txt  run_ui.py  streamlit_ui.py
src/ma_debate/: __init__.py  agents.py  cli.py  config.py  debate.py  judge.py  llm.py  rubrics.py  storage.py  utils.py
src/ma_debate/config/: agents.yaml
src/ma_debate/tools/: __init__.py
tests/: test_imports.py
